Added final capstone introduction and data sources

--- a/capstone_final_project.ipynb
+++ b/capstone_final_project.ipynb
@@ -18,8 +18,9 @@
     "If we were to discover a relationship between the location of the KFC outlets and property valuations, KFC could use this analysis to determine where their next outlet should be. \n",
     "On the other hand, KFC's competitors could possibly use this analysis to discover under-serviced neigbourhoods and gain an competitive advantage by opening an outlet there, before KFC does.\n",
     "\n",
-    "We will be using publicaly available dataset to determine the outcome.\n",
-    "Firstly, we will be using the following datasets:"
+    "We will be using publicly available datasets to determine the outcome.\n",
+    "\n",
+    "**Data sources**:"
    ]
   },
   {
